upgrade hummer 1.0.2-SNAPSHOT and Improve configuration